@@ -8,7 +8,6 @@ import com.avoristech.hotelavailability.infrastructure.config.constants.ErrorMes
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class MongoSearchPersistenceAdapter implements SearchPersistencePort {
@@ -51,7 +50,7 @@ public class MongoSearchPersistenceAdapter implements SearchPersistencePort {
                         d.getAges()
                 ))
                 .filter(s -> s.equals(search))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
